# apps/web/openapi.json
@@ -345,6 +345,12 @@
             "schema": { "type": "string" }
           },
           {
+            "name": "yearLevel",
+            "required": false,
+            "in": "query",
+            "schema": { "minimum": 1, "maximum": 6, "type": "number" }
+          },
+          {
             "name": "type",
             "required": false,
             "in": "query",
@@ -771,6 +777,7 @@
         "properties": {
           "code": { "type": "string", "minLength": 2, "maxLength": 20 },
           "name": { "type": "string", "minLength": 2, "maxLength": 100 },
+          "yearLevel": { "type": "number", "nullable": true, "minimum": 1, "maximum": 6 },
           "departmentId": { "type": "string" }
         },
         "required": ["code", "name", "departmentId"]
@@ -791,6 +798,7 @@
           "code": { "type": "string" },
           "name": { "type": "string" },
           "departmentId": { "type": "string" },
+          "yearLevel": { "type": "number", "nullable": true, "minimum": 1, "maximum": 6 },
           "department": { "$ref": "#/components/schemas/CourseDeptEntity" }
         },
         "required": ["id", "code", "name", "departmentId", "department"]
@@ -811,6 +819,7 @@
         "properties": {
           "code": { "type": "string", "minLength": 2, "maxLength": 20 },
           "name": { "type": "string", "minLength": 2, "maxLength": 100 },
+          "yearLevel": { "type": "number", "nullable": true, "minimum": 1, "maximum": 6 },
           "departmentId": { "type": "string" }
         }
       },
